# sm2env

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: aws_client.rs  config.rs  detect.rs  errors.rs  main.rs  output.rs  tests.rs
src/converters/: csv.rs  env.rs  json.rs  mod.rs  yaml.rs
