[package]
name = "sm2env"
version = "0.1.2"
edition = "2021"

[dependencies]
aws-sdk-secretsmanager = "1.64.0"
aws-config = "1.5.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }