[package]
name = "sm2env"
version = "0.2.0"
edition = "2021"

[dependencies]
aws-sdk-secretsmanager = "1.64.0"
aws-config = "1.5.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
base64 = "0.21.5"
csv = "1.3"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.8"
